--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+.tasksText {
+  transition: all 0.25s ease-in-out;
+  color: black;
+}
+
+.done {
+  text-decoration: line-through;
+  color: #ccc;
+}
